@@ -7,9 +7,9 @@ export CFLAGS := $(shell dpkg-buildflags --get CFLAGS) $(shell dpkg-buildflags -
 export CXXFLAGS := $(shell dpkg-buildflags --get CXXFLAGS) $(shell dpkg-buildflags --get CPPFLAGS)
 export LDFLAGS := $(shell dpkg-buildflags --get LDFLAGS) -Wl,--as-needed
 export QT_SELECT := qt5
-export QT_VER := 5.0
-export QT_VERSION := 5.0.2
-export QT_VERSION_TAG := 502
+export QT_VER := 5.1
+export QT_VERSION := 5.1.0
+export QT_VERSION_TAG := 510
 
 %:
 	dh $@ --list-missing --parallel
